# Auto_Collage

./: .gitignore  CMakeLists.txt  README.md  bitmap.cpp  bitmap.h  main.cpp
